Files committed from Adapter on Fri Apr 21 2023

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2121,4 +2121,17 @@ collections:
                 label: Image Alt
                 widget: string
                 required: false
+          - label: Image
+            name: '-6a3b67f3'
+            widget: object
+            fields:
+              - name: url
+                label: Image Url
+                widget: image
+                allow_multiple: false
+                required: false
+              - name: alt
+                label: Image Alt
+                widget: string
+                required: false
 publish_mode: editorial_workflow
